update bib format

--- a/texmf/tex/latex/szuthesis/szuthesis.cls
+++ b/texmf/tex/latex/szuthesis/szuthesis.cls
@@ -47,7 +47,7 @@
 \RequirePackage{ulem}% underline
 \RequirePackage{xeCJKfntef}% underline for CJK
 \RequirePackage{fancyhdr}% header and footer
-\RequirePackage[backend=biber,style=gb7714-2015]{biblatex}
+\RequirePackage[backend=biber,style=gb7714-2015,gbpub=false]{biblatex}
 %---------------------------------------------------------------------------%
 %->> Latex3
 %---------------------------------------------------------------------------%
